# lukewiwa.github.io

./: .gitignore  200.html  404.html  CNAME  Dockerfile  Makefile  README.md  _config.ts  _types.ts  bootstrap.0cc3a224.js  bootstrap.0cc3a224.js.map  bootstrap.44157ab7.js  bootstrap.44157ab7.js.map  bootstrap.62c3f1dc.js  bootstrap.62c3f1dc.js.map  bootstrap.9cb115bb.js  bootstrap.9cb115bb.js.map  bootstrap.f2d5d184.js  bootstrap.f2d5d184.js.map  create-buckets-command.sh  createBlankPost.ts  create_worktree.sh  deno.json  deno.jsonc  deploy.sh  docker-compose.yml  entrypoint.sh  generateBlankBlogPost.ts  import_map.json  index.css  index.html  index.tsx  main.08012294.js  main.08012294.js.map  main.241c0ad3.js  main.241c0ad3.js.map  main.4d4aac23.js  main.4d4aac23.js.map  main.5b70919f.js  main.5b70919f.js.map  (+36 more)
src/: App.js  README.md  app.css  build.js  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.node.json  vite.config.ts
src/.vuepress/: config.js
src/.vuepress/components/: ArchiveList.vue  BlogPostList.vue  BlogPostPreview.vue  CodeOfPoints.vue  GymnasticsPostList.vue  GymnasticsPostPreview.vue  TwitterBot.vue  utils.js
src/.vuepress/theme/: Layout.vue  NotFound.vue  enhanceApp.js
src/admin_core/: admin.py  apps.py
src/admin_utils/: admin.py  apps.py  models.py
src/admin_utils/migrations/: 0001_initial.py
src/blog/: a_good_year.md  blocks.py  dark_wiwa_published.md  ease_of_deployment.md  gymnastics_teams_suck.md  machine_readable_code.md  models.py  pwa_share_target_data.md  urls.py  views.py  wsl2_import_ubuntu_image.md
src/blog/migrations/: 0001_initial.py  0002_alter_blogpage_body.py  0002_blogpage.py
src/components/: CodeRenderer.js  Nav.js  Styled.js
src/config/: asgi.py  settings.py  urls.py
src/config/urls/: debug.py  (+2 more)
src/containers/: 404.js  Blog.js  Gymnastics.js  Home.js  MAG2020.js  Post.js  TwitterBot.js
src/core/: admin.py  models.py  urls.py  views.py
src/frontend/: index.css  index.ts
src/gymnastics/: MAG2020.js  MAG2020.md  Markov.js  markov_twitter_bot.md
src/styles/: GlobalStyle.js  Styled.js  variables.js
src/wagtail_highlight/: apps.py  blocks.py  build.ts  eslint.config.mjs  globals.d.ts  package-lock.json  package.json  tsconfig.json
(+651 files in other folders)
