[tool.poetry]
name = "wiwa-blog"
version = "0.1.0"
description = ""
authors = ["lukewiwa <luke.wiwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
django-environ = "^0.11.2"
django-storages = { extras = ["s3"], version = "^1.14.2" }
whitenoise = "^6.6.0"
mangum = "^0.17.0"
awslambdaric = "^2.0.10"
wagtail = "^6.0.1"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
ipython = "^8.22.1"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "django"
